extends CanvasLayer

@onready var controles = $Controles
@onready var main = $Main

# Bot達o de Jogar 
func _on_button_play_pressed()->void:
	get_tree().change_scene_to_file("res://Cenas/Mapa/mapa.tscn")

# Bot達o para ir para os controles
func _on_button_control_pressed()->void:
	main.visible=false
	controles.visible=true

# Bot達o para fechar o jogo
func _on_button_quit_pressed()->void:
	get_tree().quit()

# Bot達o para voltar ao menu 
func _on_button_back_menu_pressed()->void:
	main.visible=true
	controles.visible=false

